# qml-benchmarks

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
generative_models/benchmarks/: README.md  generate_data.py  run_hyperparameter_search.py
nersc/: .gitignore  Dockerfile.ubu22-PennyLane  README.md  installs.sh  pm_podman.source  run_hyperparam_search.sh  run_performance_indicator.sh  start-head.sh  start-worker.sh  submit_job.slr  submit_job2.slr  submit_job_multinode.slr  submit_job_shared.slr  submit_job_single.slr  submit_job_venv.slr  submit_profiling_jobs.slr  test.py  wrap_podman.sh  wrap_podman2.sh
nersc/container/: Dockerfile.ubu22-PennyLane  Readme
nersc/performance_indicators/: README.md  README_ray.md  check.py  circuit_variational.py  generate_linearly_separable.py  hyperparam_settings.yaml  perf_ind_iqpker_LR14_jax.py  perf_ind_iqpker_LR15_jax.py  perf_ind_iqpvar_LR14_jax.py  perf_ind_iqpvar_LR14_jax_novmap.py  perf_ind_iqpvar_LR15_jax.py  perf_ind_iqpvar_LR15_jax_novmap.py  perf_ind_iqpvar_LR16_jax.py  perf_ind_iqpvar_LR16_jax_novmap.py  perf_ind_iqpvar_LR17_jax.py  perf_ind_iqpvar_LR17_jax_novmap.py  perf_ind_iqpvar_LR18_jax.py  perf_ind_iqpvar_LR18_jax_novmap.py  perf_ind_iqpvar_LR19_jax.py  perf_ind_iqpvar_LR19_jax_novmap.py  perf_ind_iqpvar_LR20_jax.py  perf_ind_iqpvar_LR20_jax_novmap.py  perf_ind_kernel.py  perf_ind_kernel_jax.py  (+14 more)
results/: QuantumBoltzmannMachineSeparable_mnist_3-5_3d_train_GridSearchCV.csv
scripts/: run_hyperparameter_search.py  score_with_best_hyperparameters.py
tests/: test_mcmc.py  test_models.py
(+8828 files in other folders)
